///protos/rpc/champion.proto

syntax = "proto3";

package user;

service UserService {
  rpc getUser (JwPayload) returns (User);
  rpc createUser (CreateUserRequest) returns (User);
  rpc updateUser (UpdateUserRequest) returns (User);
}

message User {
  string username = 1;
  string avatar = 2;
  string email = 3;
  string id = 4;
  bool isEnable2fa = 5;
  bool isOnboarding = 6;
}

message CreateUserRequest {
  string username = 1;
  string avatar = 2;
  string email = 3;
}

message UpdateUserRequest {
  string username = 1;
  string avatar = 2;
  string email = 3;
  string id = 4;
  bool isEnable2fa = 5;
  bool isOnboarding = 6;
}

message JwPayload {
  string email = 1;
}
